2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_HR_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_HR_Management__c</fullName>
    <description>Supervisor Comment HR Management.</description>
    <inlineHelpText>Supervisor Comment HR Management.</inlineHelpText>
    <label>Comment HR Management</label>
    <type>TextArea</type>
</CustomField>