2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Human_Resource__c.field-meta.xml
<CustomField>
    <fullName>Comment_Human_Resource__c</fullName>
    <description>Supervisor Comment Human Resource.</description>
    <inlineHelpText>Supervisor Comment Human Resource.</inlineHelpText>
    <label>Comment Human Resource</label>
    <type>TextArea</type>
</CustomField>