2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Hybrid_Worksite_HTGroup__c.field-meta.xml
<CustomField>
    <fullName>Comment_Hybrid_Worksite_HTGroup__c</fullName>
    <description>Supervisor Comment Hybrid Worksite (HTGroup).</description>
    <inlineHelpText>Supervisor Comment Hybrid Worksite (HTGroup).</inlineHelpText>
    <label>Comment Hybrid Worksite (HTGroup)</label>
    <type>TextArea</type>
</CustomField>