2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Industry_best_pract_Qualitative__c.field-meta.xml
<CustomField>
    <fullName>Comment_Industry_best_pract_Qualitative__c</fullName>
    <description>Supervisor Comment Industry best practices (Qualitative).</description>
    <inlineHelpText>Supervisor Comment Industry best practices (Qualitative).</inlineHelpText>
    <label>Comment Industry best pract(Qualitative)</label>
    <type>TextArea</type>
</CustomField>