2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Industry_Best_Practices__c.field-meta.xml
<CustomField>
    <fullName>Comment_Industry_Best_Practices__c</fullName>
    <description>Supervisor Comment Industry Best Practices.</description>
    <inlineHelpText>Supervisor Comment Industry Best Practices.</inlineHelpText>
    <label>Comment Industry Best Practices</label>
    <type>TextArea</type>
</CustomField>