2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_IS_Compliance_Update__c.field-meta.xml
<CustomField>
    <fullName>Comment_IS_Compliance_Update__c</fullName>
    <description>Supervisor Comment IS Compliance Update.</description>
    <inlineHelpText>Supervisor Comment IS Compliance Update.</inlineHelpText>
    <label>Comment IS Compliance Update</label>
    <type>TextArea</type>
</CustomField>