2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_IT_Continuous_Learning_Update__c.field-meta.xml
<CustomField>
    <fullName>Comment_IT_Continuous_Learning_Update__c</fullName>
    <description>Supervisor Comment IT Continuous Learning Update</description>
    <inlineHelpText>Supervisor Comment IT Continuous Learning Update</inlineHelpText>
    <label>Comment IT Continuous Learning Update</label>
    <type>TextArea</type>
</CustomField>