2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_It_IS_Policy__c.field-meta.xml
<CustomField>
    <fullName>Comment_It_IS_Policy__c</fullName>
    <description>Supervisor Comment It &amp; IS Policy.</description>
    <inlineHelpText>Supervisor Comment It &amp; IS Policy.</inlineHelpText>
    <label>Comment It &amp; IS Policy</label>
    <type>TextArea</type>
</CustomField>