2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_IT_Maintenance_Program__c.field-meta.xml
<CustomField>
    <fullName>Comment_IT_Maintenance_Program__c</fullName>
    <description>Supervisor Comment IT Maintenance Program.</description>
    <inlineHelpText>Supervisor Comment IT Maintenance Program.</inlineHelpText>
    <label>Comment IT Maintenance Program</label>
    <type>TextArea</type>
</CustomField>