2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_IT_Security_Update__c.field-meta.xml
<CustomField>
    <fullName>Comment_IT_Security_Update__c</fullName>
    <description>Supervisor Comment IT Security Update.</description>
    <inlineHelpText>Supervisor Comment IT Security Update.</inlineHelpText>
    <label>Comment IT Security Update</label>
    <type>TextArea</type>
</CustomField>