2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_IT_Systems__c.field-meta.xml
<CustomField>
    <fullName>Comment_IT_Systems__c</fullName>
    <description>Supervisor Comment IT Systems.</description>
    <inlineHelpText>Supervisor Comment IT Systems.</inlineHelpText>
    <label>Comment IT Systems</label>
    <type>TextArea</type>
</CustomField>