2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_KnowledgeArtmove_Ops_HHGSEco_Sys__c.field-meta.xml
<CustomField>
    <fullName>Comment_KnowledgeArtmove_Ops_HHGSEco_Sys__c</fullName>
    <description>Supervisor Comment Knowledge of Artmove Ops/HHGS Eco-System</description>
    <inlineHelpText>Supervisor Comment Knowledge of Artmove Ops/HHGS Eco-System.</inlineHelpText>
    <label>Comment KnowledgeArtmove Ops/HHGSEco-Sys</label>
    <type>TextArea</type>
</CustomField>