2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Licensing_Regulatory_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Comment_Licensing_Regulatory_Mgmt__c</fullName>
    <description>Supervisor Comment Licensing &amp; Regulatory Management.</description>
    <inlineHelpText>Supervisor Comment Licensing &amp; Regulatory Management.</inlineHelpText>
    <label>Comment Licensing &amp; Regulatory Mgmt</label>
    <type>TextArea</type>
</CustomField>