2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Maintenance_HR__c.field-meta.xml
<CustomField>
    <fullName>Comment_Maintenance_HR__c</fullName>
    <description>Supervisor Comment Maintenance [HR].</description>
    <inlineHelpText>Supervisor Comment Maintenance [HR].</inlineHelpText>
    <label>Comment Maintenance [HR]</label>
    <type>TextArea</type>
</CustomField>