2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Maintenance_IT__c.field-meta.xml
<CustomField>
    <fullName>Comment_Maintenance_IT__c</fullName>
    <description>Supervisor Comment Maintenance [IT].</description>
    <inlineHelpText>Supervisor Comment Maintenance [IT].</inlineHelpText>
    <label>Comment Maintenance [IT]</label>
    <type>TextArea</type>
</CustomField>