2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Payroll_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Payroll_Management__c</fullName>
    <description>Supervisor Comment Payroll Management.</description>
    <inlineHelpText>Supervisor Comment Payroll Management.</inlineHelpText>
    <label>Comment Payroll Management</label>
    <type>TextArea</type>
</CustomField>