2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Performance_Review_MGNT__c.field-meta.xml
<CustomField>
    <fullName>Comment_Performance_Review_MGNT__c</fullName>
    <description>Supervisor Comment Performance Review Management:</description>
    <inlineHelpText>Supervisor Comment Performance Review Management:</inlineHelpText>
    <label>Comment Performance Review MGNT</label>
    <type>TextArea</type>
</CustomField>