2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Principal_Accounting_Activities__c.field-meta.xml
<CustomField>
    <fullName>Comment_Principal_Accounting_Activities__c</fullName>
    <description>Supervisor Comment Principal Accounting Activities.</description>
    <inlineHelpText>Supervisor Comment Principal Accounting Activities.</inlineHelpText>
    <label>Comment Principal Accounting Activities</label>
    <type>TextArea</type>
</CustomField>