2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Problem_Solving_Skills_FIN__c.field-meta.xml
<CustomField>
    <fullName>Comment_Problem_Solving_Skills_FIN__c</fullName>
    <description>Supervisor Comment Problem-Solving Skills [FIN].</description>
    <inlineHelpText>Supervisor Comment Problem-Solving Skills [FIN].</inlineHelpText>
    <label>Comment Problem-Solving Skills [FIN]</label>
    <type>TextArea</type>
</CustomField>