2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Project_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Project_Management__c</fullName>
    <description>Supervisor Comment Project Management.</description>
    <inlineHelpText>Supervisor Comment Project Management.</inlineHelpText>
    <label>Comment Project Management</label>
    <type>TextArea</type>
</CustomField>