2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Recruitment_Separation_MGNT__c.field-meta.xml
<CustomField>
    <fullName>Comment_Recruitment_Separation_MGNT__c</fullName>
    <description>Supervisor Comment Recruitment &amp; Separation MGNT.</description>
    <inlineHelpText>Supervisor Comment Recruitment &amp; Separation MGNT.</inlineHelpText>
    <label>Comment Recruitment &amp; Separation MGNT</label>
    <type>TextArea</type>
</CustomField>