2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Regulatory_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Comment_Regulatory_Compliance__c</fullName>
    <description>Supervisor Comment Regulatory Compliance.</description>
    <inlineHelpText>Supervisor Comment Regulatory Compliance.</inlineHelpText>
    <label>Comment Regulatory Compliance</label>
    <type>TextArea</type>
</CustomField>