2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Resourcefulness__c.field-meta.xml
<CustomField>
    <fullName>Comment_Resourcefulness__c</fullName>
    <description>Supervisor Comment Resourcefulness.</description>
    <inlineHelpText>Supervisor Comment Resourcefulness.</inlineHelpText>
    <label>Comment Resourcefulness</label>
    <type>TextArea</type>
</CustomField>