2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Salesforce_Enhancement__c.field-meta.xml
<CustomField>
    <fullName>Comment_Salesforce_Enhancement__c</fullName>
    <description>Supervisor Comment Salesforce Enhancement.</description>
    <inlineHelpText>Supervisor Comment Salesforce Enhancement.</inlineHelpText>
    <label>Comment Salesforce Enhancement</label>
    <type>TextArea</type>
</CustomField>