2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Salesforce_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Salesforce_Management__c</fullName>
    <description>Supervisor Comment Salesforce Management</description>
    <inlineHelpText>Supervisor Comment Salesforce Management.</inlineHelpText>
    <label>Comment Salesforce Management</label>
    <type>TextArea</type>
</CustomField>