2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Salesforce_Program__c.field-meta.xml
<CustomField>
    <fullName>Comment_Salesforce_Program__c</fullName>
    <description>Supervisor Comment  Salesforce Program.</description>
    <inlineHelpText>Supervisor Comment Salesforce Program.</inlineHelpText>
    <label>Comment Salesforce Program</label>
    <type>TextArea</type>
</CustomField>