2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Tax_Management_e_g_GST_VAT__c.field-meta.xml
<CustomField>
    <fullName>Comment_Tax_Management_e_g_GST_VAT__c</fullName>
    <description>Supervisor Comment Tax Management (e.g. GST, VAT).</description>
    <inlineHelpText>Supervisor Comment Tax Management (e.g. GST, VAT).</inlineHelpText>
    <label>Comment Tax Management (e.g. GST, VAT)</label>
    <type>TextArea</type>
</CustomField>