2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Tax_Regulations__c.field-meta.xml
<CustomField>
    <fullName>Comment_Tax_Regulations__c</fullName>
    <description>Supervisor Comment Tax Regulations.</description>
    <inlineHelpText>Supervisor Comment Tax Regulations.</inlineHelpText>
    <label>Comment Tax Regulations</label>
    <type>TextArea</type>
</CustomField>