2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Time_Management_HR__c.field-meta.xml
<CustomField>
    <fullName>Comment_Time_Management_HR__c</fullName>
    <description>Supervisor Comment Time Management [HR].</description>
    <inlineHelpText>Supervisor Comment Time Management [HR].</inlineHelpText>
    <label>Comment Time Management [HR]</label>
    <type>TextArea</type>
</CustomField>