2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Training__c.field-meta.xml
<CustomField>
    <fullName>Comment_Training__c</fullName>
    <description>Supervisor Comment Training.</description>
    <inlineHelpText>Supervisor Comment Training.</inlineHelpText>
    <label>Comment Training</label>
    <type>TextArea</type>
</CustomField>