2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Training_and_Development__c.field-meta.xml
<CustomField>
    <fullName>Comment_Training_and_Development__c</fullName>
    <description>Supervisor Comment Training and Development.</description>
    <inlineHelpText>Supervisor Comment Training and Development.</inlineHelpText>
    <label>Comment Training and Development</label>
    <type>TextArea</type>
</CustomField>