2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Comment_Verbal_Written_Comm_Skills__c.field-meta.xml
<CustomField>
    <fullName>Comment_Verbal_Written_Comm_Skills__c</fullName>
    <description>Supervisor Verbal &amp; Written Communication Skills</description>
    <inlineHelpText>Supervisor Verbal &amp; Written Communication Skills</inlineHelpText>
    <label>Comment Verbal &amp; Written Comm. Skills</label>
    <type>TextArea</type>
</CustomField>