2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Communication_Skills_HR__c.field-meta.xml
<CustomField>
    <fullName>Communication_Skills_HR__c</fullName>
    <description>- Ability to understand instructions and the requirements (written and verbal)
 - Active listening and properly documented into executable action
 - Ability to write proper business English</description>
    <inlineHelpText>- Ability to understand instructions and the requirements (written and verbal)
 - Active listening and properly documented into executable action
 - Ability to write proper business English</inlineHelpText>
    <label>Communication Skills [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>