2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Communication_Skills_IT__c.field-meta.xml
<CustomField>
    <fullName>Communication_Skills_IT__c</fullName>
    <description>-Ability to understand instructions and the requirements (written and verbal)
 -Maintain high levels of clear and concise communication with colleagues
 -Ability to perform administrative work</description>
    <inlineHelpText>-Ability to understand instructions and the requirements (written and verbal)
 -Maintain high levels of clear and concise communication with colleagues
 -Ability to perform administrative work</inlineHelpText>
    <label>Communication Skills [IT]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>