2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Company_Knowledge_HR__c.field-meta.xml
<CustomField>
    <fullName>Company_Knowledge_HR__c</fullName>
    <description>- Company history, principal activities, departments &amp; functions
- Organisation chart
- Warehouse locations
- Regional offices, contact persons
- Uniform Trading Conditions (UTC)</description>
    <inlineHelpText>- Company history, principal activities, departments &amp; functions
- Organisation chart
- Warehouse locations
- Regional offices, contact persons
- Uniform Trading Conditions (UTC)</inlineHelpText>
    <label>Company Knowledge [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>