2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Company_s_Act__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Act__c</fullName>
    <description>-Audit: audited report, business registration &amp; filing, financial reporting, corporate service providers filing &amp; AGM
-Local national regulator of business entities: Registrable Controller, Registrar of minutes &amp; books</description>
    <inlineHelpText>-Audit: audited report, business registration &amp; filing, financial reporting, corporate service providers filing &amp; AGM
-Local national regulator of business entities: Registrable Controller, Registrar of minutes &amp; books</inlineHelpText>
    <label>Company&apos;s Act</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>