2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Company_Secretarial_matters__c.field-meta.xml
<CustomField>
    <fullName>Company_Secretarial_matters__c</fullName>
    <description>-Coordinate &amp; ensure timely filing of Directors Resolutions In Writing, Disclosure of Interest, Remuneration, Registrable Controller Disclosure, etc 
-Regulatory update on latest requirements</description>
    <inlineHelpText>-Coordinate &amp; ensure timely filing of Directors Resolutions In Writing, Disclosure of Interest, Remuneration, Registrable Controller Disclosure, etc 
-Regulatory update on latest requirements</inlineHelpText>
    <label>Company Secretarial matters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>