2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Compensation_Benefits_Management__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Benefits_Management__c</fullName>
    <description>-Review remuneration offered to market trend
-Performance Management
-Review employee welfare
-Efforts in narrowing the expectation gap between employee and employer eg Work-life balance</description>
    <inlineHelpText>-Review remuneration offered to market trend
-Performance Management
-Review employee welfare
-Efforts in narrowing the expectation gap between employee and employer (Eg work-life balance)</inlineHelpText>
    <label>Compensation &amp; Benefits Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>