2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Computer_Literacy__c.field-meta.xml
<CustomField>
    <fullName>Computer_Literacy__c</fullName>
    <description>-Advance knowledge of Microsoft Office (particularly Excel)
-Standard accounting software packages such as but not limited to AccPac-Report/GL/AR/AP/BR module, BPO software 
-System maintenance &amp; update on the latest features and usage requirements</description>
    <inlineHelpText>-Advance knowledge of Microsoft Office (particularly Excel)
-Standard accounting software packages such as but not limited to AccPac-Report/GL/AR/AP/BR module, BPO software 
-System maintenance &amp; update on the latest features and usage requirements</inlineHelpText>
    <label>Computer Literacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>