2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Computer_Literacy_HR__c.field-meta.xml
<CustomField>
    <fullName>Computer_Literacy_HR__c</fullName>
    <description>-Advance knowledge of Microsoft Office (particularly Excel, Word, Powerpoint)
-Knowledge of HR systems and database
-Knowledge with payroll software (e.g. SAGE EPS Core, Infotech Payroll) 
-External recruitment agencies resume database</description>
    <inlineHelpText>-Advance knowledge of Microsoft Office (particularly Excel, Word, and Powerpoint)
-Knowledge of HR systems and database
-Knowledge with payroll software (e.g. SAGE EPS Core, Infotech Payroll) 
-External recruitment agencies resume database</inlineHelpText>
    <label>Computer Literacy [HR]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>