2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Computer_Skill__c.field-meta.xml
<CustomField>
    <fullName>Computer_Skill__c</fullName>
    <description>Microsoft Office Suite, IT hardware and software, etc)</description>
    <inlineHelpText>Microsoft Office Suite, IT hardware and software, etc)</inlineHelpText>
    <label>Computer Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>