2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality__c</fullName>
    <description>Grading for Confidentiality.</description>
    <inlineHelpText>To prevent misuse of confidential information (illegal or immoral use). To protect reputation. Employment may depend on it (e.g. non-disclosure agreement). It ensures compliance with the law, eg. Data Protection Law</inlineHelpText>
    <label>Confidentiality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>