2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Review Forms (FIN/HR/IT/QA)</relationshipLabel>
    <relationshipName>Employee_Review_Forms_FIN_HR_IT_QA</relationshipName>
    <type>Lookup</type>
</CustomField>