2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Forms_FIN_HR_IT_QA__c/fields/Contract_Management__c.field-meta.xml
<CustomField>
    <fullName>Contract_Management__c</fullName>
    <description>-Tender support, Contract/Lease renewal, Insurance review</description>
    <inlineHelpText>-Tender support, Contract/Lease renewal, Insurance review</inlineHelpText>
    <label>Contract Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>